external-crates/move/crates/move-compiler/tests/move_check/parser/function_params_missing.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
input_file: crates/move-compiler/tests/move_check/parser/function_params_missing.move
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_params_missing.move:3:12
  │
3 │     fun fn { }
  │            ^
  │            │
  │            Unexpected '{'
  │            Expected '('
